<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MowMyLawn</string>
    <string name="Splash_Screen">Mow My Lawn!</string>
    <string name="Splash_Screen2">Lawn Service App</string>
    <string name="action_settings">Settings</string>
    <string name="User_Name">Enter User Name:</string>
    <string name="Password">Enter Password:</string>
    <string name="Login">Login</string>
    <string name="Register">Register New User</string>
    <string name="title_activity_list__lawns">Map</string>
    <string name="Owner">Register as Home Owner</string>
    <string name="Service">Register as Service Provider</string>
    <string name="Full_Name">Please Enter Full Name</string>
    <string name="Address">Please Enter Your Address</string>
    <string name="City">Enter Your City</string>
    <string name="State">Please Select Your State</string>
    <string name="Zip">Enter Your Zip Code</string>
    <string name="Phone">Enter Your Phone Number</string>
    <string name="Register_Now">Sign Up</string>
    <string name="Age">Enter Your Age</string>
    <string name="name">Name</string>
    <string name="provider_name">Name</string>


</resources>
