<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginScreen">

<LinearLayout android:id="@+id/uname_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView android:id="@+id/Evaluator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/User_Name"
        android:id="@+id/User_Name" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        />

</LinearLayout>

<LinearLayout android:id="@+id/pwd_block"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/uname_block"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Password"
        android:id="@+id/Password" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"/>

</LinearLayout>

<Button
    android:id="@+id/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="60dp"
    android:layout_below="@+id/pwd_block"
    android:text="@string/Login" />

<Button
    android:id="@+id/Register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btn_login"
    android:layout_alignBottom="@+id/btn_login"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_toRightOf="@+id/btn_login"
    android:layout_toEndOf="@+id/btn_login"
    android:onClick="toUserMenu"
    android:text="@string/Register" />

</RelativeLayout>
