<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/menu_Home_Owner"
        android:visibility="visible"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="#FFFFFF">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Service"
            android:layout_below="@id/button"
            android:id="@+id/button2"
            android:layout_weight="5" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Owner"
            android:id="@+id/button"
            android:layout_weight="5" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Provider"
        android:visibility="invisible"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Full_Name"
            android:id="@+id/textView"
            android:layout_alignBottom="@+id/editText"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/City"
            android:id="@+id/textView3"
            android:layout_below="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:layout_toLeftOf="@+id/editText2"
            android:layout_toStartOf="@+id/editText2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/State"
            android:id="@+id/textView4"
            android:layout_below="@+id/editText3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_toRightOf="@+id/textView4"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_alignTop="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Zip"
            android:id="@+id/textView5"
            android:layout_below="@+id/spinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_below="@+id/spinner"
            android:layout_toRightOf="@+id/textView4"
            android:layout_alignRight="@+id/editText3"
            android:layout_alignEnd="@+id/editText3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Phone"
            android:id="@+id/textView6"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="43dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Age"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_below="@+id/editText5"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_Now"
            android:id="@+id/button3"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Owner"
        android:visibility="invisible"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:id="@+id/textView2-2"
            android:layout_below="@+id/textView-2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Full_Name"
            android:id="@+id/textView-2"
            android:layout_alignBottom="@+id/editText-2"
            android:layout_toLeftOf="@+id/editText-2"
            android:layout_toStartOf="@+id/editText-2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText-2"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView2-2"
            android:layout_toRightOf="@+id/textView2-2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText2-2"
            android:layout_alignTop="@+id/textView2-2"
            android:layout_toRightOf="@+id/textView2-2"
            android:layout_toEndOf="@+id/textView2-2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/City"
            android:id="@+id/textView3-2"
            android:layout_below="@+id/editText2-2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:layout_toLeftOf="@+id/editText2-2"
            android:layout_toStartOf="@+id/editText2-2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText3-2"
            android:layout_alignTop="@+id/textView3-2"
            android:layout_toRightOf="@+id/textView3-2"
            android:layout_toEndOf="@+id/textView3-2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/State"
            android:id="@+id/textView4-2"
            android:layout_below="@+id/editText3-2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner-2"
            android:layout_toRightOf="@+id/textView4-2"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_alignTop="@+id/textView4-2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Zip"
            android:id="@+id/textView5-2"
            android:layout_below="@+id/spinner-2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4-2"
            android:layout_below="@+id/spinner-2"
            android:layout_toRightOf="@+id/textView4-2"
            android:layout_alignRight="@+id/editText3-2"
            android:layout_alignEnd="@+id/editText3-2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Phone"
            android:id="@+id/textView6-2"
            android:layout_below="@+id/editText4-2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="43dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText5-2"
            android:layout_alignBottom="@+id/textView6-2"
            android:layout_alignLeft="@+id/spinner-2"
            android:layout_alignStart="@+id/spinner-2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_Now"
            android:id="@+id/button3-2"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>
